gitops/apps/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files-ingress
  namespace: files
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'papers please'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - files.512.ch
    secretName: files-tls
  rules:
  - host: files.512.ch
    http:
      paths:
      # TODO: fix rewrite-target so that httpd is not aware of the path redirection here
      # - path: /s
      #   pathType: Prefix
      #   backend:
      #     service: 
      #       name: files-serve
      #       port:
      #         number: 80
      - path: /metube/
        pathType: Prefix
        backend:
          service: 
            name: files-metube
            port:
              number: 8081
